updates likes component for correct icon, updates social stat spacing within cards

--- a/src/assets/css/molecules/_social-stat.scss
+++ b/src/assets/css/molecules/_social-stat.scss
@@ -20,4 +20,8 @@
 	&.right {
 		float: right;
 	}
+
+	i.is-liked {
+		color: $red;
+	}
 }
